update md files

--- a/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
+++ b/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
@@ -30,7 +30,7 @@
 		infoLink : 'https://github.com/pushme-pullyou/pushme-pullyou.github.io/',
 		tagLine : 'Browse & view stuff on PushMe PullYou real fast!',
 		subText : 'Browse & view stuff on PushMe PullYou real fast!',
-		title : 'PushMe PullYou',
+		title : 'Succeed Study Supplement',
 		defaultFile : 'dev-notes.md'
 	}
 
@@ -38,24 +38,10 @@
 	MNU.tableOfContents =
 
 `
-### predIQtiv
-* [predIQtiv home page]( #README.md )
-* [Copyright and license]( #license.md )
-### eyeCue
-* [eyeCue Read Me]( #eye-cue/README.md )
-    * [eyeCue Replay Read Me](#eye-cue/replay/README.md )
-    * [eyeCue Realtime Read]( #eye-cue/realtime/README.md )
-### Trades
-* [Trades Get Read Me]( #trades-get/README.md )
-### Tweets
-* [Tweets Read Me]( #tweets/README.md )
-### Company URLs
-* [URL Get Read Me]( #url-get/README.md )
-### White Papers
-* [White Papers Read Me]( #white-papers/README.md )
-    * [Markets, Outliers and Data Normalization]( #white-papers/outliers-data-normlization.md )
-    * [Code, Styling and Abstraction]( #white-papers/code-styling-abstraction.md )
-### [Blog Posts]( https://github.com/prediqtiv/prediqtiv.github.io/labels/blog%20post )
+### Succeed Study Supplement
+* [Read Me]( #tootoo/r5/succeed-study-supplement/README.md )
+* [Eating Goals]( #tootoo/r5/succeed-study-supplement/eating-goals.md )
+* [Shopping Goals]( #tootoo/r5/succeed-study-supplement/shopping-goals.md )
 `;
 
 	SEL.typeSelectedIndex = 0;
