--- a/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
+++ b/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
@@ -42,6 +42,7 @@
 * [Read Me]( #tootoo/r5/succeed-study-supplement/README.md )
 * [Eating Goals]( #tootoo/r5/succeed-study-supplement/eating-goals.md )
 * [Shopping Goals]( #tootoo/r5/succeed-study-supplement/shopping-goals.md )
+* [Condiments]( #tootoo/r5/succeed-study-supplement/condiments.md )
 `;
 
 	SEL.typeSelectedIndex = 0;
