--- a/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
+++ b/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
@@ -51,6 +51,7 @@
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
 * [Best-websites-a-programmer-should-visit Read Me]( #tootoo/r5/best-websites/README.md )
+* &#x1F5D7; [Building Simulation 2017 Sponsors]( https://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html )
 * [Ladybug Tools View Read Me ]( #tootoo/r5/ladybug-tools-view/README.md )
 * &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
 #### TooToo Utilities
