--- a/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html
+++ b/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html
@@ -114,7 +114,7 @@ button, input[type=button] { background-color: #ccc; border: 2px #fff solid; col
 		showdown.setFlavor( 'github' );
 		converter = new showdown.Converter();
 
-		fileName = 'http://crossorigin.me/http://www.buildingsimulation2017.org/sponsors.html';
+		fileName = 'https://crossorigin.me/http://www.buildingsimulation2017.org/sponsors.html';
 		requestFile( fileName, callback );
 
 	}
