move test tweet

--- a/tootoo/r5/skim/index.html
+++ b/tootoo/r5/skim/index.html
@@ -29,7 +29,7 @@
 	p = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
 
 	console.log( '', p );
-//	window.location.href = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
+	window.location.href = '../../../index.html#tootoo/r5/skim/README.md';
 
 
 </script>
