--- a/tootoo/r5/skim/tootoo5-skim-r1.html
+++ b/tootoo/r5/skim/tootoo5-skim-r1.html
@@ -228,6 +228,7 @@
 		path : '', //pages2'
 		subText : 'pet the cat',
 	};
+
 	users.prediqtiv = {
 		user : 'prediqtiv',
 		subText : 'Invest smarter',
@@ -245,6 +246,7 @@
 	};
 */
 
+/*
 	let protocol = location.protocol;
 
 	if ( protocol === 'file:' ) {
@@ -284,8 +286,9 @@
 		path: path,
 
 	}
+*/
 
-	user = users.theoArmour;
+//	user = users.theoArmour;
 
 	const b = '<br>';
 
@@ -312,13 +315,12 @@
 		mnuTagline.innerHTML = '<small><p>' + tagLine + '</p></small>';
 		mnuHelp.href = 'https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/';
 
-		MNU.init();
 
 		USR.initSelectUsers();
 
+		MNU.init();
 		CON.initContents();
 		SEL.initSelectType();
-
 
 		SEL.selectMenuType();
 
