--- a/tootoo/r5/skim/merge-files-into-one-r1-skim.html
+++ b/tootoo/r5/skim/merge-files-into-one-r1-skim.html
@@ -12,7 +12,8 @@
 <script>
 // Copyright 2017 pushMe pullYou authors ~ MIT license
 
-	var fileName = 'tootoo-prediqtiv-r1.html'
+	var fileName = 'tootoo5-skim-r1.html';
+
 	var text;
 
 	files = [
@@ -21,6 +22,7 @@
 		'../js-dev/html.js',
 		'../js-dev/menu.js',
 		'../js-dev/contents.js',
+		'../js-dev/usr-select-user.js',
 		'../js-dev/sel-select-menu-type.js',
 
 	];
@@ -31,6 +33,7 @@
 		'<script src=../js-dev/html.js ><\/script>',
 		'<script src=../js-dev/menu.js ><\/script>',
 		'<script src=../js-dev/contents.js ><\/script>',
+		'<script src=../js-dev/usr-select-user.js ><\/script>',
 		'<script src=../js-dev/sel-select-menu-type.js ><\/script>',
 
 	]
