--- a/tootoo/r5/prediqtiv/tootoo-prediqtiv-r1.html
+++ b/tootoo/r5/prediqtiv/tootoo-prediqtiv-r1.html
@@ -90,12 +90,14 @@
 		MNU.init();
 
 		CON.initContents();
+
 		SEL.initSelectType();
 
 //		mnuUserTitle.innerHTML = '<h3>User: ' + user.user + '</h3>';
 //		mnuUserTagline.innerHTML = 'Repo: ' + user.repo;
 
 		SEL.selectMenuType();
+		mnuTypeDetails.removeAttribute('open');
 
 	}
 
