--- a/tootoo/r5/skim/tootoo5-skim-r1.html
+++ b/tootoo/r5/skim/tootoo5-skim-r1.html
@@ -23,6 +23,26 @@
 
 	let users = {};
 
+	users.abantechInteraction = {
+		user : 'abantech',
+		subText : 'Hello, there',
+		repo : 'interaction-studies',
+		branch : 'gh-pages',
+		path : '',
+		rawgit : true,
+		defaultFile : 'readme.md'
+	};
+
+	users.abantech = {
+		user : 'abantech',
+		subText : 'Hello, there',
+		repo : 'abantech.github.io',
+		branch : 'master',
+		path : '',
+		rawgit : true,
+		defaultFile : 'readme.md'
+	};
+
 	users.bPesquet = {
 		user: 'bpesquet',
 		subText: 'A modern introduction to an essential language.',
@@ -56,6 +76,20 @@
 		path : '',
 		rawgit: true
 	};
+
+	users.github = {
+		user : 'github',
+		repo : 'open-source-guide',
+		branch : 'gh-pages',
+		path : '',
+		rawgit: true,
+
+		tagLine : 'a collection of resources for individuals, communities, and companies who want to learn how to run and contribute to an open source project',
+		subText: 'Your open source exploring happy place',
+		title : 'Open Source Guides'
+	};
+
+
 	users.jaanga = {
 		user : 'jaanga',
 		logo : '<img src=https://jaanga.github.io/j.png height=32 >',
@@ -154,6 +188,8 @@
 		path : '',
 		rawgit: true
 	};
+
+
 	users.paulmasson = {
 		user : 'paulmasson',
 		logo : '<img src=http://paulmasson.github.io/apple-touch-icon.png height=32 >',
