--- a/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
+++ b/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
@@ -7,7 +7,7 @@
 <meta name=description content='Browse and view files on Parallel Constitution with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-06-20' >
-<link rel=stylesheet href=../js-dev/style.css >
+<link rel=stylesheet href=style-pc.css >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
