--- a/tootoo/r5/prediqtiv/tootoo-prediqtiv-r1.html
+++ b/tootoo/r5/prediqtiv/tootoo-prediqtiv-r1.html
@@ -34,7 +34,7 @@
 		tagLine : 'Invest smarter!',
 		subText : 'Invest smarter!',
 		title : '<img src=' + images + 'predIQtiv.png  height=64 >',
-		defaultFile : 'REAADME.md'
+//		defaultFile : 'README.md'
 	}
 
 
