--- a/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
+++ b/tootoo/r5/succeed-study-supplement/succeed-study-supplement-r1.html
@@ -31,7 +31,7 @@
 		tagLine : 'Browse & view stuff on PushMe PullYou real fast!',
 		subText : 'Browse & view stuff on PushMe PullYou real fast!',
 		title : 'Succeed Study Supplement',
-		defaultFile : 'dev-notes.md'
+//		defaultFile : 'dev-notes.md'
 	}
 
 
