--- a/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
+++ b/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
@@ -31,7 +31,7 @@
 		tagLine : 'Browse & view stuff on PushMe PullYou real fast!',
 		subText : 'Browse & view stuff on PushMe PullYou real fast!',
 		title : 'PushMe PullYou',
-		defaultFile : 'dev-notes.md'
+//		defaultFile : 'dev-notes.md'
 	}
 
 
@@ -104,8 +104,8 @@
 	function onHashChange() {
 
 		CON.getFileSetContents( location.hash.slice( 1 ) );
-		CON.setButtons( location.hash.slice( 1 ) );
-		SEL.highlightMenuItem();
+//		CON.setButtons( location.hash.slice( 1 ) );
+//		SEL.highlightMenuItem();
 
 	}
 
