--- a/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
+++ b/tootoo/r5/tootoo-pushme-pullyou/tootoo-pushme-pullyou-r1.html
@@ -48,6 +48,7 @@
 * [Dev Read Me]( #tootoo/r3/dev/README.md )
 * [Library Read Me]( #tootoo/r4/library/README.md )
 * [Skim Read Me]( #tootoo/r4/skim/README.md )
+* [get-github-dir-names]( #tootoo/r4/utilities/get-github-dir-names/README.md )
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
 * [Best-websites-a-programmer-should-visit Read Me]( #tootoo/r5/best-websites/README.md )
@@ -56,10 +57,10 @@
 * &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
 #### TooToo Utilities
 * [Utilities Read Me]( #tootoo/utilities/README.md )
-* [get-github-dir-names]( #tootoo/r4/utilities/get-github-dir-names/README.md )
 * [Make Read Me Read Me]( #tootoo/utilities/make-github-readme/README.md )
 * [Merge Files into one]( #tootoo/utilities/merge-files-into-one/README.md )
 * &#x1F5D7; [Merge Files into one]( https://pushme-pullyou.github.io/tootoo/utilities/merge-files-into-one/merge-files-into-one-r3.html )
+* [Markdown Cheat Sheet]( #tootoo/utilities/make-github-readme/readme-cheat-sheet.md )
 `;
 
 	SEL.typeSelectedIndex = 0;
