--- a/tootoo/utilities/make-github-readme/readme-cheat-sheet.html
+++ b/tootoo/utilities/make-github-readme/readme-cheat-sheet.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-window.location.href = '../../../../index.html#tootoo/r3/utilities/make-github-readme/readme-cheat-sheet.md' + location.hash;
+window.location.href = '../../../index.html#tootoo/utilities/make-github-readme/readme-cheat-sheet.md';
 
 </script>
 </body>
