--- a/tootoo/r5/succeed-study-supplement/index.html
+++ b/tootoo/r5/succeed-study-supplement/index.html
@@ -6,27 +6,30 @@
 <body>
 <script>
 
-//	let protocol, usr, firstDot, path;
+  let protocol, firstDot, user, path, pathFull;
 
-	protocol = location.protocol;
+  protocol = location.protocol;
 
-	if ( protocol === 'file:' ) {
+  if ( protocol === 'file:' ) {
 
-		firstDot = location.pathname.indexOf( 'github.io' );
-		usr = location.pathname.slice( 0, firstDot - 1 );
-		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
+    firstDot = location.pathname.indexOf( 'github.io' );
+    user = location.pathname.slice( 0, firstDot - 1 );
+    user = user.slice( user.lastIndexOf( '/' ) + 1 );
 
-		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+    path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-	} else if ( protocol.includes( 'http' ) ) {
+  } else if ( protocol.includes( 'http' ) ) {
 
-		firstDot = location.hostname.indexOf( '.github.io' );
-		usr = location.hostname.slice( 0, firstDot );
-		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
+	firstDot = location.hostname.indexOf( '.github.io' );
+	user = location.hostname.slice( 0, firstDot );
+	path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
 
-	}
+}
 
-	window.location.href = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
+pathFull = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
+
+console.log( '', pathFull );
+// window.location.href = pathFull;
 
 </script>
 </body>
