--- a/tootoo/r5/tootoo-pushme-pullyou/index.html
+++ b/tootoo/r5/tootoo-pushme-pullyou/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-//  let protocol, firstDot, user, path, pathFull;
+  let protocol, firstDot, user, path, pathFull;
 
   protocol = location.protocol;
 
@@ -18,20 +18,16 @@
 
     path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-console.log( 'path', path );
   } else if ( protocol.includes( 'http' ) ) {
 
-	firstDot = location.hostname.indexOf( '.github.io' );
-	user = location.hostname.slice( 0, firstDot );
-	path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
+    firstDot = location.hostname.indexOf( '.github.io' );
+    user = location.hostname.slice( 0, firstDot );
+    path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
 
-}
+	}
 
-pathFull = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
-
-console.log( '', pathFull );
-
-window.location.href = pathFull;
+	pathFull = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
+	window.location.href = pathFull;
 
 </script>
 </body>
