--- a/tootoo/r5/tootoo5-pushme-pullyou/tootoo5-pushme-pullyou-r1.html
+++ b/tootoo/r5/tootoo5-pushme-pullyou/tootoo5-pushme-pullyou-r1.html
@@ -56,9 +56,9 @@
 * &#x1F5D7; [Building Simulation 2017 Sponsors]( https://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html )
 * [Ladybug Tools View Read Me ]( #tootoo/r5/ladybug-tools-view/README.md )
 * &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
+* [Parallel Constitution Read Me]( #tootoo/r5/parallel-constitution/README.md )
 * [Succeed Study Supplement Read Me]( #tootoo/r5/succeed-study-supplement/README.md )
-* [TooToo Parallel Constitution Read Me]( #tootoo/r5/parallel-constitution/README.md )
-* [TooToo pushMe pullYou Read Me]( #tootoo/r5/pushme-pullyou/README.md )
+* [TooToo pushMe pullYou Read Me]( #tootoo/r5/tootoo5-pushme-pullyou/README.md )
 
 #### TooToo Utilities
 * [Utilities Read Me]( #tootoo/utilities/README.md )
