--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ return;
 
 }
 
-if ( location.protocol === 'file:' && user.defaultFile ) {
+if ( location.protocol === 'vvvvv file:' && user.defaultFile ) {
 
 CON.urlGHPages = '';
 
@@ -982,13 +982,13 @@ MNU.tableOfContents =
 #### TooToo 5
 * [TooToo Anywhere Read Me]( #tootoo/r5/anywhere/README.md )
 * [Best-websites-a-programmer-should-visit Read Me]( #tootoo/r5/best-websites/README.md )
-* [BS2017 Sponsor Links Read Me]( https://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html)
+* [BS2017 Sponsor Links Read Me]( http://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html)
 * &#x1F5D7; [Building Simulation 2017 Sponsors]( https://pushme-pullyou.github.io/tootoo/r5/bs2017-sponsor-links/bs2017-sponsor-links-r2.html )
 * [Ladybug Tools View Read Me ]( #tootoo/r5/ladybug-tools-view/README.md )
 * &#x1F5D7; [Ladybug Tools View]( https://pushme-pullyou.github.io/tootoo/r5/ladybug-tools-view/ladybug-tools-view-r1.html )
+* [Parallel Constitution Read Me]( #tootoo/r5/parallel-constitution/README.md )
 * [Succeed Study Supplement Read Me]( #tootoo/r5/succeed-study-supplement/README.md )
-* [TooToo Parallel Constitution Read Me]( #tootoo/r5/parallel-constitution/README.md )
-* [TooToo pushMe pullYou Read Me]( #tootoo/r5/pushme-pullyou/README.md )
+* [TooToo pushMe pullYou Read Me]( #tootoo/r5/tootoo5-pushme-pullyou/README.md )
 
 #### TooToo Utilities
 * [Utilities Read Me]( #tootoo/utilities/README.md )
@@ -1028,6 +1028,9 @@ MNU.init();
 
 CON.initContents();
 SEL.initSelectType();
+
+//	mnuUserTitle.innerHTML = '<h3>User: ' + user.user + '</h3>';
+//	mnuUserTagline.innerHTML = 'Repo: ' + user.repo;
 
 SEL.selectMenuType();
 
