--- a/tootoo/r5/tootoo5-pushme-pullyou/index.html
+++ b/tootoo/r5/tootoo5-pushme-pullyou/index.html
@@ -27,7 +27,7 @@
 	}
 
 	pathFull = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
-	window.location.href = pathFull;
+	window.location.href = 'tootoo5-pushme-pullyou-r1.html#README.md'; //pathFull;
 
 </script>
 </body>
