--- a/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
+++ b/tootoo/r5/parallel-constitution/parallel-constitution-r1.html
@@ -27,27 +27,45 @@
 		user: 'jaanga',
 		repo: 'jaanga.github.io',
 		branch: 'master',
-		path: 'demo/parallel-constitution/',
+//		path: 'demo/parallel-constitution/',
 		path: '',
+		anchor: '',
+		file: '',
 
 		infoLink : 'https://github.com/jaanga/jaanga.github.io/tree/master/demo/parallel-constitution',
 //		logo: '<img src=' + images + 'five-boxes.png height=32 >',
 //		tagLine : 'Invest smarter!',
 //		subText : 'Invest smarter!',
 //		title : '<img src=' + images + 'predIQtiv.png  height=64 >',
-		defaultFile : 'demo/parallel-constitution/egypt-parallel-constitution.md',
 		defaultFile : 'egypt-parallel-constitution.md',
+//		defaultFile : '../../../../jaanga.github.io/demo/parallel-constitution/egypt-parallel-constitution.md',
 	}
+
+if ( location.protocol === 'file:' && user.defaultFile ) {
+
+//	user.path = '../../../../jaanga.github.io/demo/parallel-constitution/';
+//	user.defaultFile = 'egypt-parallel-constitution.md';
+
+}
 
 
 	MNU.tableOfContents =
 
 `
-* [Egypt Parallel Constitution]( #demo/parallel-constitution/egypt-parallel-constitution.md )
-* [Read Me]( #demo/parallel-constitution/README.md )
+
+* [Read Me]( #README.md )
 * [Copyright and license]( #license.md )
-* [Preamble and Nine Guiding Principles]( #preamble )
-* [Bill of Rights]( #BillofRights )
+
+The Constitution
+* [Egypt Parallel Constitution]( #egypt-parallel-constitution.md )
+* [Preamble and Nine Guiding Principles]( #egypt-parallel-constitution.md#preamble-and-nine-guiding-principles )
+* [1. Bill of Rights]( #egypt-parallel-constitution.md#bill-of-rights )
+* [2. The State]( #egypt-parallel-constitution.md#the-state )
+* [3. Legislative Power]( #egypt-parallel-constitution.md#legislative-power )
+* [4. Executive Power]( #egypt-parallel-constitution.md#executive-power )
+* [5. Municipalities]( #egypt-parallel-constitution.md#municipalities )
+* [6. Judicial Power]( #egypt-parallel-constitution.md#judicial-power )
+* [7. Amending the Constitution and General Provisions]( #egypt-parallel-constitution.md#amending-the-constitution-and-general-provisions )
 `;
 
 	SEL.typeSelectedIndex = 0;
@@ -83,6 +101,7 @@
 		SEL.initSelectType();
 
 		SEL.selectMenuType();
+
 		mnuTypeDetails.removeAttribute('open');
 
 	}
@@ -90,15 +109,18 @@
 
 	function onHashChange() {
 
-		file = location.hash.slice( 1 );
+		let hashes;
 
-		if ( file === user.defaultFile ) {
+		hashes = location.hash.split( '#' );
 
-			contents.className = 'parCon';
+		user.file = hashes[ 1 ];
 
-		}
-		CON.getFileSetContents( location.hash.slice( 1 ) );
-		CON.setButtons( location.hash.slice( 1 ) );
+		user.anchor = hashes.length > 2 ? hashes[ 2 ] : '';
+
+		contents.className = user.file === user.defaultFile  ? 'parCon' : '';
+
+		CON.getFileSetContents( user.file );
+		CON.setButtons( user.file );
 		SEL.highlightMenuItem();
 
 	}
